force-app/main/default/objects/User/fields/GLBP1_Rut__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Rut__c</fullName>
    <label>Rut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>