force-app/main/default/objects/User/fields/ZRH_AutoridadSuscripcion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_AutoridadSuscripcion__c</fullName>
    <label>Autoridad de suscripción</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>