force-app/main/default/objects/User/fields/ZRH_Rut__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Rut__c</fullName>
    <description>Almacena rut del usuario.</description>
    <label>RUT</label>
    <length>11</length>
    <type>Text</type>
</CustomField>