force-app/main/default/objects/User/validationRules/ZRH_ValidacionRUT.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionRUT</fullName>
    <active>true</active>
    <description>Valida formato de Rut</description>
    <errorConditionFormula>AND(
/*Si el bypass no esta activado*/
NOT($Setup.ZRH_Bypass__c.ZRH_DesactivarValidationRules__c ),

IF(
AND( REGEX(ZRH_Rut__c, &apos;^[0-9]+-[0-9kK]{1}$&apos;) , TEXT(IF(LEN(ZRH_Rut__c) = 10, 11 - MOD(
VALUE(MID(ZRH_Rut__c, 8, 1)) * 2 +
VALUE(MID(ZRH_Rut__c, 7, 1)) * 3 +
VALUE(MID(ZRH_Rut__c, 6, 1)) * 4 +
VALUE(MID(ZRH_Rut__c, 5, 1)) * 5 +
VALUE(MID(ZRH_Rut__c, 4, 1)) * 6 +
VALUE(MID(ZRH_Rut__c, 3, 1)) * 7 +
VALUE(MID(ZRH_Rut__c, 2, 1)) * 2 +
VALUE(MID(ZRH_Rut__c, 1, 1)) * 3 , 11) ,
11 - MOD(
VALUE(MID(ZRH_Rut__c, 7, 1)) * 2 +
VALUE(MID(ZRH_Rut__c, 6, 1)) * 3 +
VALUE(MID(ZRH_Rut__c, 5, 1)) * 4 +
VALUE(MID(ZRH_Rut__c, 4, 1)) * 5 +
VALUE(MID(ZRH_Rut__c, 3, 1)) * 6 +
VALUE(MID(ZRH_Rut__c, 2, 1)) * 7 +
VALUE(MID(ZRH_Rut__c, 1, 1)) * 2 , 11))) = RIGHT(ZRH_Rut__c,1)
||
(TEXT(IF(LEN(ZRH_Rut__c) = 10, 11 - MOD(
VALUE(MID(ZRH_Rut__c, 8, 1)) * 2 +
VALUE(MID(ZRH_Rut__c, 7, 1)) * 3 +
VALUE(MID(ZRH_Rut__c, 6, 1)) * 4 +
VALUE(MID(ZRH_Rut__c, 5, 1)) * 5 +
VALUE(MID(ZRH_Rut__c, 4, 1)) * 6 +
VALUE(MID(ZRH_Rut__c, 3, 1)) * 7 +
VALUE(MID(ZRH_Rut__c, 2, 1)) * 2 +
VALUE(MID(ZRH_Rut__c, 1, 1)) * 3 , 11) ,
11 - MOD(
VALUE(MID(ZRH_Rut__c, 7, 1)) * 2 +
VALUE(MID(ZRH_Rut__c, 6, 1)) * 3 +
VALUE(MID(ZRH_Rut__c, 5, 1)) * 4 +
VALUE(MID(ZRH_Rut__c, 4, 1)) * 5 +
VALUE(MID(ZRH_Rut__c, 3, 1)) * 6 +
VALUE(MID(ZRH_Rut__c, 2, 1)) * 7 +
VALUE(MID(ZRH_Rut__c, 1, 1)) * 2 , 11))) = &quot;10&quot; 
				&amp;&amp; UPPER(RIGHT(ZRH_Rut__c,1)) = &quot;K&quot;)
||
(TEXT(IF(LEN(ZRH_Rut__c) = 10, 11 - MOD(
VALUE(MID(ZRH_Rut__c, 8, 1)) * 2 +
VALUE(MID(ZRH_Rut__c, 7, 1)) * 3 +
VALUE(MID(ZRH_Rut__c, 6, 1)) * 4 +
VALUE(MID(ZRH_Rut__c, 5, 1)) * 5 +
VALUE(MID(ZRH_Rut__c, 4, 1)) * 6 +
VALUE(MID(ZRH_Rut__c, 3, 1)) * 7 +
VALUE(MID(ZRH_Rut__c, 2, 1)) * 2 +
VALUE(MID(ZRH_Rut__c, 1, 1)) * 3 , 11) ,
11 - MOD(
VALUE(MID(ZRH_Rut__c, 7, 1)) * 2 +
VALUE(MID(ZRH_Rut__c, 6, 1)) * 3 +
VALUE(MID(ZRH_Rut__c, 5, 1)) * 4 +
VALUE(MID(ZRH_Rut__c, 4, 1)) * 5 +
VALUE(MID(ZRH_Rut__c, 3, 1)) * 6 +
VALUE(MID(ZRH_Rut__c, 2, 1)) * 7 +
VALUE(MID(ZRH_Rut__c, 1, 1)) * 2 , 11))) = &quot;11&quot; &amp;&amp; 
RIGHT(ZRH_Rut__c,1) = &quot;0&quot;)), false , true))</errorConditionFormula>
    <errorMessage>Rut no válido</errorMessage>
</ValidationRule>